# pymol-mcp

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  claude_socket_plugin.py  pymol_connection.py  pymol_mcp_server.py  pymol_view.py  pyproject.toml
.claude-plugin/: marketplace.json
.claude/skills/binding-site-visualization/: SKILL.md
.claude/skills/miscellaneous/: SKILL.md
.claude/skills/movie-creation/: SKILL.md
.claude/skills/publication-figures/: SKILL.md
.claude/skills/pymol/: SKILL.md
.claude/skills/pymol-connect/: SKILL.md
.claude/skills/pymol-fundamentals/: SKILL.md
.claude/skills/pymol-setup/: SKILL.md
.claude/skills/rfd3/: SKILL.md
.claude/skills/structure-alignment-analysis/: SKILL.md
claude-plugin/: CLAUDE.md  README.md
claude-plugin/.claude-plugin/: marketplace.json  plugin.json
claude-plugin/hooks/: hooks.json
claude-plugin/skills/antibody-visualization/: SKILL.md
claude-plugin/skills/miscellaneous/: SKILL.md
claude-plugin/skills/protein-structure-basics/: SKILL.md
claude-plugin/skills/publication-figures/: SKILL.md
claude-plugin/skills/pymol-connect/: SKILL.md
claude-plugin/skills/pymol-fundamentals/: SKILL.md
claude-plugin/skills/pymol-setup/: SKILL.md
docs/: COOKBOOK.md  learning-log.md
docs/learnings/: publication-figures.md  visualization-categories.md
docs/plans/: 2026-01-28-autodidact-mission-design.md  2026-02-01-distribution-design.md
docs/progress/: curriculum-tracker.md
src/claudemol/: __init__.py  cli.py  connection.py  plugin.py  session.py  view.py
tests/: test_session.py
(+3 files in other folders)
