[project]
name = "claudemol"
version = "0.1.0"
description = "PyMOL integration for Claude Code - control molecular visualization via natural language"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Alex Naka" }]
keywords = ["pymol", "molecular-visualization", "claude", "ai", "structural-biology"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = []

[project.scripts]
claudemol = "claudemol.cli:main"

[project.urls]
Homepage = "https://github.com/ANaka/claudemol"
Repository = "https://github.com/ANaka/claudemol"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claudemol"]

[tool.hatch.build.targets.sdist]
include = [
    "src/claudemol/**/*.py",
    "README.md",
    "LICENSE",
]

[tool.pyright]
include = ["src/claudemol"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.uv]
dev-dependencies = ["pyright>=1.1.379", "pytest>=8.3.3", "ruff>=0.6.9"]
